kubernetes/infrastructure/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: vps-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "prometheus.robin-vidal.com"
  rules:
    - backendRefs:
        - name: prometheus-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: vps-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "alertmanager.robin-vidal.com"
  rules:
    - backendRefs:
        - name: prometheus-alertmanager
          port: 9093
